Completed reveal on scroll.

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -29,6 +29,7 @@
 @import "base/_footer.pcss";
 @import "base/_header.pcss";
 @import "base/_primary-nav.pcss";
+@import "modules/_reveal-item.pcss";
 
 
 
