--- a/app/assets/styles/base/_header.pcss
+++ b/app/assets/styles/base/_header.pcss
@@ -12,8 +12,15 @@
   &--is-expanded {
     height: auto;
 
+  }
+  &--fixed {
+    @mixin atMedium {
+      position: fixed;
+      z-index: 999;
+    }
 
   }
+
 
   &__logo {
     transition: all .3s ease-out;
